Fix z-indexes

--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -20,7 +20,7 @@
   transition-property: opacity;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .wrapper > nav {
