--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 20;
 }
 
 @media (max-width: 799px) {
